# rust-wasm-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/calculator-core/: Cargo.toml
crates/calculator-core/src/: lib.rs
crates/calculator-wasm/: Cargo.toml
crates/calculator-wasm/src/: lib.rs
crates/calculator-wasm/tests/: web.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  Calculator.css  Calculator.tsx  index.css  main.tsx
